[gd_scene load_steps=3 format=3 uid="uid://deniiqx2ceuu5"]

[ext_resource type="Script" path="res://Client.gd" id="1_0mpvd"]
[ext_resource type="Script" path="res://control.gd" id="1_b8fqi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_b8fqi")

[node name="Client" type="Node" parent="."]
script = ExtResource("1_0mpvd")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 20

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="StartClient" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Connect"

[node name="Disconnect" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
placeholder_text = "digite "

[node name="OptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
item_count = 2
popup/item_0/text = "ws://192.168.0.49:8915"
popup/item_0/id = 0
popup/item_1/text = "ws://192.168.137.79:8915"
popup/item_1/id = 1

[node name="ClientStatus" type="Label" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Client Status: desconectado id: "

[node name="AddEffect" type="Button" parent="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "add effect"

[connection signal="button_down" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/StartClient" to="Client" method="_on_start_client_button_down"]
[connection signal="button_down" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/Disconnect" to="Client" method="_on_disconnect_button_down"]
[connection signal="item_selected" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/HBoxContainer/OptionButton" to="Client" method="_on_option_button_item_selected"]
[connection signal="button_down" from="PanelContainer/MarginContainer/ScrollContainer/VBoxContainer/AddEffect" to="." method="_on_add_effect_button_down"]
